feat: Rebrand from Shaadi Dreams to WedPlan, update UI with new color palette, fonts, and a redesigned footer.

--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
             <div class="flex flex-1 justify-end gap-8">
                 <div class="hidden md:flex items-center gap-8">
                     <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
-                        href="#">Services</a>
+                        href="index.html">Home</a>
                     <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
-                        href="#">Real Weddings</a>
+                        href="services.html">Services</a>
                     <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
-                        href="#">About</a>
+                        href="portfolio.html">Portfolio</a>
                     <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
-                        href="#">Contact</a>
+                        href="testimonials.html">Testimonials</a>
+                    <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                        href="contactus.html">Contact</a>
                 </div>
                 <button
                     class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 px-6 bg-primary hover:bg-primary-dark transition-colors text-white text-sm font-bold shadow-lg shadow-rose-500/20">
