--- a/index.html
+++ b/index.html
@@ -41,29 +41,53 @@
 <body class="font-display bg-background-light dark:bg-background-dark text-[#292524] dark:text-stone-100">
     <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
         <header
-            class="sticky top-0 z-50 flex items-center justify-between border-b border-rose-100 dark:border-stone-800 bg-white/95 dark:bg-background-dark/95 backdrop-blur-md px-6 md:px-10 py-4 shadow-sm">
-            <div class="flex items-center gap-3 text-primary">
-                <div class="size-9 flex items-center justify-center rounded-full bg-rose-50 dark:bg-rose-900/20">
-                    <span class="material-symbols-outlined text-3xl">favorite</span>
+            class="sticky top-0 z-50 border-b border-rose-100 dark:border-stone-800 bg-white/95 dark:bg-background-dark/95 backdrop-blur-md shadow-sm">
+            <div class="flex items-center justify-between px-6 md:px-10 py-4">
+                <div class="flex items-center gap-3 text-primary">
+                    <div class="size-9 flex items-center justify-center rounded-full bg-rose-50 dark:bg-rose-900/20">
+                        <span class="material-symbols-outlined text-3xl">favorite</span>
+                    </div>
+                    <h2
+                        class="text-[#292524] dark:text-white text-2xl font-serif font-bold leading-tight tracking-tight">
+                        WedPlan</h2>
                 </div>
-                <h2 class="text-[#292524] dark:text-white text-2xl font-serif font-bold leading-tight tracking-tight">
-                    WedPlan</h2>
+                <div class="hidden md:flex flex-1 justify-end gap-8">
+                    <div class="flex items-center gap-8">
+                        <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                            href="index.html">Home</a>
+                        <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                            href="services.html">Services</a>
+                        <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                            href="portfolio.html">Portfolio</a>
+                        <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                            href="testimonials.html">Testimonials</a>
+                        <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                            href="contactus.html">Contact</a>
+                    </div>
+                    <button
+                        class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 px-6 bg-primary hover:bg-primary-dark transition-colors text-white text-sm font-bold shadow-lg shadow-rose-500/20">
+                        <span class="truncate">Free Consultation</span>
+                    </button>
+                </div>
+                <button id="mobile-menu-btn" class="md:hidden text-primary focus:outline-none">
+                    <span class="material-symbols-outlined text-3xl">menu</span>
+                </button>
             </div>
-            <div class="flex flex-1 justify-end gap-8">
-                <div class="hidden md:flex items-center gap-8">
-                    <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
-                        href="index.html">Home</a>
-                    <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
-                        href="services.html">Services</a>
-                    <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
-                        href="portfolio.html">Portfolio</a>
-                    <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
-                        href="testimonials.html">Testimonials</a>
-                    <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
-                        href="contactus.html">Contact</a>
-                </div>
+            <!-- Mobile Menu -->
+            <div id="mobile-menu"
+                class="hidden md:hidden bg-white dark:bg-background-dark border-t border-rose-100 dark:border-stone-800 px-6 py-4 flex flex-col gap-4">
+                <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                    href="index.html">Home</a>
+                <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                    href="services.html">Services</a>
+                <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                    href="portfolio.html">Portfolio</a>
+                <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                    href="testimonials.html">Testimonials</a>
+                <a class="text-[#292524] dark:text-stone-300 text-sm font-semibold hover:text-primary transition-colors uppercase tracking-wide"
+                    href="contactus.html">Contact</a>
                 <button
-                    class="flex min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 px-6 bg-primary hover:bg-primary-dark transition-colors text-white text-sm font-bold shadow-lg shadow-rose-500/20">
+                    class="w-full flex cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 px-6 bg-primary hover:bg-primary-dark transition-colors text-white text-sm font-bold shadow-lg shadow-rose-500/20">
                     <span class="truncate">Free Consultation</span>
                 </button>
             </div>
@@ -497,6 +521,14 @@
         </footer>
     </div>
 
+    <script>
+        const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        mobileMenuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
 </body>
 
 </html>
