--- a/portfolio.html
+++ b/portfolio.html
@@ -238,13 +238,14 @@
                         <h3 class="text-xl font-bold leading-tight">Priya &amp; Amit</h3>
                         <div class="flex items-center gap-1 mt-1 text-sm text-gray-200">
                             <span class="material-symbols-outlined text-[16px]">location_on</span>
-                            <span>Pune, Maharashtra</span>
+                            <span>Bikaner, Rajasthan</span>
                         </div>
                     </div>
                 </div>
                 <div class="px-2 pb-2">
                     <p class="text-sm text-gray-600 dark:text-gray-400 line-clamp-2">
-                        An intimate, colorful backyard Mehendi ceremony that proves elegance doesn't always need a
+                        An intimate, colorful backyard Mehendi ceremony in Bikaner that proves elegance doesn't always
+                        need a
                         massive budget.
                     </p>
                     <div class="mt-3 flex gap-2">
@@ -274,13 +275,14 @@
                         <h3 class="text-xl font-bold leading-tight">Sana &amp; Kabir</h3>
                         <div class="flex items-center gap-1 mt-1 text-sm text-gray-200">
                             <span class="material-symbols-outlined text-[16px]">location_on</span>
-                            <span>Mumbai, Maharashtra</span>
+                            <span>Nokha, Rajasthan</span>
                         </div>
                     </div>
                 </div>
                 <div class="px-2 pb-2">
                     <p class="text-sm text-gray-600 dark:text-gray-400 line-clamp-2">
-                        A chic, modern ballroom reception with fusion catering and contemporary floral installations.
+                        A chic, modern ballroom reception in Nokha with fusion catering and contemporary floral
+                        installations.
                     </p>
                     <div class="mt-3 flex gap-2">
                         <span
@@ -310,17 +312,17 @@
                         <h3 class="text-xl font-bold leading-tight">Lakshmi &amp; Arjun</h3>
                         <div class="flex items-center gap-1 mt-1 text-sm text-gray-200">
                             <span class="material-symbols-outlined text-[16px]">location_on</span>
-                            <span>Chennai, Tamil Nadu</span>
+                            <span>Jodhpur, Rajasthan</span>
                         </div>
                     </div>
                 </div>
                 <div class="px-2 pb-2">
                     <p class="text-sm text-gray-600 dark:text-gray-400 line-clamp-2">
-                        Embracing heritage with a stunning temple wedding featuring classical Nadaswaram music and pure
-                        silk sarees.
+                        Embracing heritage with a stunning palace wedding featuring traditional folk music and pure
+                        Bandhani sarees.
                     </p>
                     <div class="mt-3 flex gap-2">
-                        <span class="text-xs font-medium text-primary bg-primary/10 px-2 py-1 rounded-md">Temple</span>
+                        <span class="text-xs font-medium text-primary bg-primary/10 px-2 py-1 rounded-md">Royal</span>
                         <span
                             class="text-xs font-medium text-primary bg-primary/10 px-2 py-1 rounded-md">Cultural</span>
                     </div>
@@ -331,7 +333,7 @@
                 class="group relative flex flex-col gap-3 rounded-2xl bg-white dark:bg-[#2a1a2a] p-3 shadow-sm hover:shadow-xl hover:shadow-primary/10 transition-all duration-300">
                 <div class="relative aspect-[4/5] overflow-hidden rounded-xl">
                     <div class="h-full w-full bg-cover bg-center transition-transform duration-700 group-hover:scale-110"
-                        data-alt="Sunset beach wedding setup in Goa"
+                        data-alt="Sunset lakeside wedding setup in Udaipur"
                         style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAb8CBe_P5JhPEpje7a9kmty35VuMIgEOea_rO-uVJLPaHR8bN1wxbeXELmloWJcq6bXjCxytBeGR1gWmLMh-AZOWwPUfbuBbKu_7EcMB3lCJx7tr9JTT_aXAWMesUKhSTSMdfSgQNCK2TKzJ1qHgIXmS8WsC3Ea4AVSGaw7Ug-H27_lYi3kUY_m4D7MBj9mlmrN9wUMnRmGKPjiz9bIjb898DdDKxCX2aqkF4FkWinwIGF9-3u4sWojlrRYGHBwpHoW24SYisnCifJ");'>
                     </div>
                     <div
@@ -346,16 +348,18 @@
                         <h3 class="text-xl font-bold leading-tight">Meera &amp; Dev</h3>
                         <div class="flex items-center gap-1 mt-1 text-sm text-gray-200">
                             <span class="material-symbols-outlined text-[16px]">location_on</span>
-                            <span>Goa, India</span>
+                            <span>Udaipur, Rajasthan</span>
                         </div>
                     </div>
                 </div>
                 <div class="px-2 pb-2">
                     <p class="text-sm text-gray-600 dark:text-gray-400 line-clamp-2">
-                        A breezy sunset wedding on the shores of Goa, combining relaxed vibes with luxury hospitality.
+                        A breezy lakeside wedding on the shores of Udaipur, combining relaxed vibes with luxury
+                        hospitality.
                     </p>
                     <div class="mt-3 flex gap-2">
-                        <span class="text-xs font-medium text-primary bg-primary/10 px-2 py-1 rounded-md">Beach</span>
+                        <span
+                            class="text-xs font-medium text-primary bg-primary/10 px-2 py-1 rounded-md">Lakeside</span>
                         <span class="text-xs font-medium text-primary bg-primary/10 px-2 py-1 rounded-md">Sunset</span>
                     </div>
                 </div>
@@ -386,13 +390,13 @@
                         <h3 class="text-xl font-bold leading-tight">Simran &amp; Raj</h3>
                         <div class="flex items-center gap-1 mt-1 text-sm text-gray-200">
                             <span class="material-symbols-outlined text-[16px]">location_on</span>
-                            <span>Chandigarh, Punjab</span>
+                            <span>Jaipur, Rajasthan</span>
                         </div>
                     </div>
                 </div>
                 <div class="px-2 pb-2">
                     <p class="text-sm text-gray-600 dark:text-gray-400 line-clamp-2">
-                        High energy, endless dancing, and a feast fit for kings. A true Big Fat Punjabi Wedding
+                        High energy, endless dancing, and a feast fit for kings. A true Big Fat Rajasthani Wedding
                         experience.
                     </p>
                     <div class="mt-3 flex gap-2">
@@ -441,7 +445,7 @@
                         </div>
                         <div>
                             <h4 class="font-bold text-[#181118] dark:text-white">Simran &amp; Raj</h4>
-                            <p class="text-sm text-gray-500">Chandigarh Wedding</p>
+                            <p class="text-sm text-gray-500">Jaipur Wedding</p>
                         </div>
                     </div>
                 </div>
@@ -467,7 +471,7 @@
                         </div>
                         <div>
                             <h4 class="font-bold text-[#181118] dark:text-white">Sana &amp; Kabir</h4>
-                            <p class="text-sm text-gray-500">Mumbai Wedding</p>
+                            <p class="text-sm text-gray-500">Nokha Wedding</p>
                         </div>
                     </div>
                 </div>
@@ -563,7 +567,7 @@
                 <ul class="flex flex-col gap-4 text-stone-400 text-sm">
                     <li class="flex items-start gap-3">
                         <span class="material-symbols-outlined text-primary text-lg mt-0.5">location_on</span>
-                        <span>123, Wedding Lane, Hauz Khas,<br />New Delhi, India 110016</span>
+                        <span>Bikaner and Nokha,<br />Rajasthan, India</span>
                     </li>
                     <li class="flex items-center gap-3">
                         <span class="material-symbols-outlined text-primary text-lg">call</span>
