--- a/services.html
+++ b/services.html
@@ -545,7 +545,7 @@
                     <ul class="flex flex-col gap-4 text-stone-400 text-sm">
                         <li class="flex items-start gap-3">
                             <span class="material-symbols-outlined text-primary text-lg mt-0.5">location_on</span>
-                            <span>123, Wedding Lane, Hauz Khas,<br />New Delhi, India 110016</span>
+                            <span>Bikaner and Nokha,<br />Rajasthan, India</span>
                         </li>
                         <li class="flex items-center gap-3">
                             <span class="material-symbols-outlined text-primary text-lg">call</span>
