--- a/testimonials.html
+++ b/testimonials.html
@@ -254,7 +254,7 @@
                                 </div>
                                 <div>
                                     <p class="text-sm font-bold text-[#181118] dark:text-white">Neha &amp; Rohan</p>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Married Jan 2024 • Delhi</p>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Married Jan 2024 • Bikaner</p>
                                 </div>
                             </div>
                         </div>
@@ -286,7 +286,7 @@
                                 <div>
                                     <p class="text-sm font-bold text-[#181118] dark:text-white">Lakshmi &amp; Karthik
                                     </p>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Married Nov 2023 • Bangalore</p>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Married Nov 2023 • Jodhpur</p>
                                 </div>
                             </div>
                         </div>
@@ -316,7 +316,7 @@
                                 </div>
                                 <div>
                                     <p class="text-sm font-bold text-[#181118] dark:text-white">Simran &amp; Kabir</p>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Married Feb 2024 • Mumbai</p>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Married Feb 2024 • Nokha</p>
                                 </div>
                             </div>
                         </div>
@@ -346,7 +346,7 @@
                                 </div>
                                 <div>
                                     <p class="text-sm font-bold text-[#181118] dark:text-white">Ananya &amp; Vivek</p>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Married Mar 2024 • Pune</p>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Married Mar 2024 • Ajmer</p>
                                 </div>
                             </div>
                         </div>
@@ -376,7 +376,7 @@
                                 </div>
                                 <div>
                                     <p class="text-sm font-bold text-[#181118] dark:text-white">Meera &amp; Dev</p>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Married Oct 2023 • Jaipur</p>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Married Oct 2023 • Udaipur</p>
                                 </div>
                             </div>
                         </div>
@@ -422,7 +422,7 @@
                             <div
                                 class="absolute bottom-0 left-0 w-full bg-gradient-to-t from-black/80 to-transparent p-4 text-white">
                                 <h3 class="font-bold">Royal Palace Wedding Highlights</h3>
-                                <p class="text-xs text-gray-300">Riya &amp; Amit • 3:45</p>
+                                <p class="text-xs text-gray-300">Riya &amp; Amit • Udaipur • 3:45</p>
                             </div>
                         </div>
                         <!-- Video Card 2 -->
@@ -440,8 +440,8 @@
                             </div>
                             <div
                                 class="absolute bottom-0 left-0 w-full bg-gradient-to-t from-black/80 to-transparent p-4 text-white">
-                                <h3 class="font-bold">Goa Beachside Sangeet</h3>
-                                <p class="text-xs text-gray-300">Tara &amp; Vihaan • 2:10</p>
+                                <h3 class="font-bold">Lakeside Sangeet</h3>
+                                <p class="text-xs text-gray-300">Tara &amp; Vihaan • Udaipur • 2:10</p>
                             </div>
                         </div>
                         <!-- Video Card 3 -->
@@ -567,7 +567,7 @@
                     <ul class="flex flex-col gap-4 text-stone-400 text-sm">
                         <li class="flex items-start gap-3">
                             <span class="material-symbols-outlined text-primary text-lg mt-0.5">location_on</span>
-                            <span>123, Wedding Lane, Hauz Khas,<br />New Delhi, India 110016</span>
+                            <span>Bikaner and Nokha,<br />Rajasthan, India</span>
                         </li>
                         <li class="flex items-center gap-3">
                             <span class="material-symbols-outlined text-primary text-lg">call</span>
