--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                                 </div>
                                 <div>
                                     <p class="font-bold text-[#292524] dark:text-white">Vikram &amp; Sneha</p>
-                                    <p class="text-sm text-gray-500">Delhi, 2023</p>
+                                    <p class="text-sm text-gray-500">Bikaner, 2023</p>
                                 </div>
                             </div>
                         </div>
@@ -408,7 +408,7 @@
                             </div>
                             <p class="text-[#292524] dark:text-stone-200 text-lg italic leading-relaxed font-serif">
                                 "Professional, punctual, and passionate. The team handled the logistics for our
-                                destination wedding in Goa perfectly. Highly recommended!"
+                                destination wedding in Nokha perfectly. Highly recommended!"
                             </p>
                             <div
                                 class="flex items-center gap-4 mt-auto pt-6 border-t border-gray-100 dark:border-stone-800">
@@ -418,7 +418,7 @@
                                 </div>
                                 <div>
                                     <p class="font-bold text-[#292524] dark:text-white">Arjun &amp; Priya</p>
-                                    <p class="text-sm text-gray-500">Goa, 2022</p>
+                                    <p class="text-sm text-gray-500">Nokha, 2022</p>
                                 </div>
                             </div>
                         </div>
@@ -487,7 +487,7 @@
                     <ul class="flex flex-col gap-4 text-stone-400 text-sm">
                         <li class="flex items-start gap-3">
                             <span class="material-symbols-outlined text-primary text-lg mt-0.5">location_on</span>
-                            <span>123, Wedding Lane, Hauz Khas,<br />New Delhi, India 110016</span>
+                            <span>Bikaner and Nokha,<br />Rajasthan, India</span>
                         </li>
                         <li class="flex items-center gap-3">
                             <span class="material-symbols-outlined text-primary text-lg">call</span>
